--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api_gateway:
     build: ./services/api_gateway
@@ -9,6 +7,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -19,6 +19,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -29,6 +31,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -39,6 +43,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -49,6 +55,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -59,8 +67,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OLLAMA_HOST=http://localhost:11434
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -71,6 +79,8 @@ services:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
       - RABBITMQ_URL=amqp://guest:guest@192.168.122.100:5672
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
@@ -83,6 +93,8 @@ services:
     environment:
       - DATABASE_URL=postgresql://jobuser:jobpass@192.168.122.100:5432/jobhunter
       - REDIS_URL=redis://192.168.122.100:6379
+    env_file:
+      - .env
     restart: unless-stopped
     networks:
       - app-network
